# F3-Data-Models

./: .buildinfo  .env.example  .gitignore  README.md  genindex.html  index.html  models.html  models.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  utils.py
.doctrees/: environment.pickle  index.doctree  models.doctree  modules.doctree
.github/workflows/: docs.yaml  migration.yaml
_modules/: index.html
_modules/f3_data_models/: models.html
_sources/: index.rst.txt  models.rst.txt  modules.rst.txt
alembic/: env.py
alembic/versions/: 01807f1d41da_adding_indexes_on_instances_and_.py  12a25ac9d642_changing_some_defaults_indices_and_.py  3796f642e38d_removing_types_x_org_and_tags_x_org_and_.py  38484f89e64b_making_org_type_id_and_org_id_nullable_.py  4e0673582e75_simplified_achievements_org_types_event_.py  59f8518b05a0_event_type_active_flag_and_ao_count_.py  5b56bd54a1a1_adding_ao_id_to_update_requests.py  5c3d6d2cc8eb_create_magic_link_tables.py  5ca7a52e90f0_remove_slack_team_fk.py  60f136397b36_re_initialize_alembic.py  613421f1ea52_changing_role_name_to_char_from_enum.py  68b233d305c2_adding_is_active_flag_to_event_tags.py  6bb50b8557fe_taking_is_active_off_event_tags_and_.py  6cfc0d3d89b8_changing_achievement_threshold_type_to_.py  760bee3701a9_setting_cascading_deletes_for_event_.py  81a812f162bf_changing_user_email_index_to_ignore_case.py  88f549c87890_adding_period_dimension_to_achievements_.py  (+25 more)
docs/: conf.py  index.rst  models.rst  schema.md
docs/source/: conf.py  (+2 more)
f3_data_models/: models.py  utils.py
(+44 files in other folders)
