[tool.poetry]
name = "f3-data-models"
version = "0.1.0"
description = ""
authors = ["Evan Petzoldt <evan.petzoldt@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
sqlalchemy-schemadisplay = "^2.0"
graphviz = "^0.20.3"
alembic = "^1.14.0"
cloud-sql-python-connector = "^1.13.0"
pg8000 = "^1.31.2"
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^2.5.0"
sphinx-rtd-theme = "^3.0.2"
sphinx-multiversion = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
